# solana-prediction-market

./: .gitignore  README.md  package.json  pnpm-lock.yaml
anchor/: Anchor.toml
anchor/programs/sewer-bets/: Cargo.toml
anchor/programs/sewer-bets/src/: lib.rs
app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/api-test/: page.tsx
app/api/consent/: route.ts
app/api/leaderboard/: route.ts
app/bets/: page.tsx
app/debug/: page.tsx
app/disclaimers/: page.tsx
app/leaderboard/: page.tsx
app/my-bets/: page.tsx
app/privacy/: page.tsx
app/test-api/: page.tsx
app/test-components/: page.tsx
components/compliance/: age-gate-modal.tsx  cookie-banner.tsx
components/layout/: category-nav.tsx  footer.tsx  header.tsx  sewer-bg.tsx
components/markets/: betting-interface.tsx  countdown-timer.tsx  market-card.tsx  market-type-toggle.tsx
components/sewer/: dripping-text.tsx  neon-card.tsx  odds-bar.tsx  sewer-modal.tsx  sludge-button.tsx  token-selector.tsx
docs/: ARCHITECTURE.md  DATABASE_DIAGRAM.md  KALSHI_OVERHAUL_PLAN_SOLANA.md  PROMPT_SEQUENCE.md  WIREFRAMES.md  lore-fast-markets-plan.md  master-plan.md  to-do-beta-live.md
hooks/: use-microcopy.ts  use-trades-websocket.ts
lib/: api-client.ts  bet-store.ts  constants.ts  format-utils.ts  market-store.ts  microcopy.ts  mock-data.ts  supabase.ts  types.ts  ui-store.ts  wallet-store.ts
scripts/: 001-create-schema.sql  002-seed-data.sql  004-add-market-type.sql  005-kalshi-overhaul-phase1.sql  006-rls-indexes-phase1.sql  007-seed-content-pages.sql  embed-lore.ts
(+11 files in other folders)
